src/style/main.css
/* ... */
/* ---------------------------------------------------------------------- */
/* -----------------------------MOBILE DISPLAY--------------------------- */
/* ---------------------------------------------------------------------- */
@media only screen and (max-width: 600px) {
/* -----------------------INDEX CSS---------------------- */
.header{
    height: 80px;
}   

.section-space{
    display: block;
}

.sidebar{
    display: flex;
    width: 80%;
}
.content{
    width: 100%;
    margin-left: 0%;
}

.section-title{
    font-size: 40px;

}
.section-song{
    height: 180px;
    min-width: 120px;
    width: 120px;
}
.section-song2{
    display: none;
}

.search-box-wrapper{
    display: none;
}

.mobile-sidebar{
    display: block;
    height: 50px;
    width: 50px;

    font-size: 30px;
    display: flex;
    justify-content: center;
    align-self: center;
    align-items: center;
}


.usr_img_btn img {
	border-radius:50rem;
	width: 10em;
	height: 10em;
}
.dropdown-content{
    transform: translate(120%, -9rem);
}

.dropdown-content button{
    border-radius: 1rem;
}
    
/* -----------------------REGISTER CSS---------------------- */    
.regbody{
width: 80%;
margin-left: 10%;
}

/* -----------------------LOGIN CSS---------------------- */
.loginbutton{
    align-self: center;
    width: 30%;
}
/* -----------------------ACCOUNT CSS---------------------- */
.account-content{
    margin-left: 0%;
    width: 100%;
}

.account-change-button{
    width: 20%;
}
/* -----------------------PLAYLISTS CSS---------------------- */
    html {
        --playlist-margin: 1em;
    }
    .playlist-element span {
        font-size: 0.65em;
            
    }
}

